--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,13 +39,14 @@
 }
 
 .detail {
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
+    background-color: var(--color-grey-dark-1);
     background-color: var(--line);
 }
 
 .description {
-    font-size: 1.4rem;
     background-color: #fff;
     box-shadow: var(--shadow-light);
     padding: 3rem;
@@ -55,4 +56,8 @@
 
 .user-reviews {
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
